fix: vertical jump when URL bar is focused (#103)

--- a/chrome/includes/cascade-nav-bar.css
+++ b/chrome/includes/cascade-nav-bar.css
@@ -16,8 +16,6 @@
 #urlbar,
 #urlbar * {
 
-  padding-block-start: var(--uc-urlbar-top-spacing) !important;
-
   outline: none !important;
   box-shadow: none !important;
 
@@ -44,4 +42,3 @@
 
 .urlbar-icon, #urlbar-go-button { margin: auto; }
 .urlbar-page-action { padding: 0 inherit !important; }
-.urlbar-page-action .urlbar-icon { margin-top: 6px !important; }
